Working on Assignment 4.22.16

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddFishActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".DetailActivity"></activity>
     </application>
 
